--- a/webdev/index.html
+++ b/webdev/index.html
@@ -8,6 +8,7 @@
   <title>WebDev | Home</title>
 
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/new.css">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -82,7 +83,7 @@
     </section>
 
     <!-- Split Section -->
-    <section class="section-padding section-grey">
+    <!--<section class="section-padding section-grey">
       <div class="container">
         <div class="split-section">
           <div class="split-section__text">
@@ -95,7 +96,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section>-->
 
   </main>
 
