--- a/webdev/contact.html
+++ b/webdev/contact.html
@@ -64,8 +64,8 @@
                           id="contact-message"
                           rows="4"></textarea>
               </div>
-              <div class="form-col">
-                <div id="error" style="color: red"></div>
+              <div id="error" style="color: red"></div>
+              <div class="form-col-center">
                 <button class="btn btn-primary" type="submit">Submit</button>
               </div>
             </form>
